# MirageWallpaper

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: build-macos.yml
Mirage/Mirage Screen Saver/en.lproj/: Localizable.strings
Mirage/Mirage Screen Saver/zh-Hans.lproj/: Localizable.strings
Mirage/Mirage Screen Saver/zh-Hant.lproj/: Localizable.strings
Mirage/Mirage Wallpaper/: AppDelegate.swift  Localizable.xcstrings  main.swift
Mirage/Mirage Wallpaper.xcodeproj/: project.pbxproj
Mirage/Mirage Wallpaper/ContentView/: ContentView.swift  FirstLaunchView.swift  ImportPanels.swift  MainWindow.swift
Mirage/Mirage Wallpaper/GlobalComponents/: WorkingInProgress.swift
Mirage/scripts/: build.sh  bundle_renderers.sh
RmskinRenderer/: CMakeLists.txt
SceneRenderer/: CMakePresets.json
SceneRenderer/scripts/: build.sh
VideoRenderer/: CMakeLists.txt  CMakePresets.json
VideoRenderer/Tools/VideoViewer/: CMakeLists.txt  VideoViewer.mm
VideoRenderer/scripts/: build.sh
WebRenderer/: .gitignore  CMakeLists.txt
WebRenderer/Sources/WebRenderer/: CMakeLists.txt  WRAudioTap.h  WRAudioTap.mm  WRDesktopInputForwarder.h  WRDesktopInputForwarder.mm  WRURLSchemeHandler.h  WRURLSchemeHandler.mm  WallpaperManifest.h  WallpaperManifest.mm  WebRendererEngine.h  WebRendererEngine.mm
WebRenderer/Tools/WebViewer/: CMakeLists.txt  WebViewer.mm
WebRenderer/scripts/: build.sh
assets/materials/fonts/: basefont_msdf.json  (+3 more)
assets/shaders/: chroma4.frag  chroma4.vert  combine.frag  combine_video_hdr.frag  common_vertex.h  foliage4.frag  foliage4.vert  font.frag  font.vert  fur4.frag  fur4.vert  generic4.frag  generic4.vert  genericparticle.frag  genericropeparticle.frag  passthroughsrgb.frag
scripts/: build_all.sh  preset.sh
(+208 files in other folders)
